--- a/K_Bridge/Views/Shared/Components/LayoutHeader/Default.cshtml
+++ b/K_Bridge/Views/Shared/Components/LayoutHeader/Default.cshtml
@@ -66,14 +66,14 @@
 
             <div class="position-fixed top-0 end-0 p-3" style="z-index: 11">
                 <div id="liveToastSignUp" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-                    <div class="toast-header">
+                    <div class="toast-header bg-main-color-layout">
                         <img src="~/img/Logo_75.png" height="20" width="20" class="rounded me-2" alt="...">
-                        <strong class="me-auto kbridge-text text-color-header text-spacing-2">K-Bridge</strong>
-                        <small>Ngay bây giờ</small>
+                        <strong class="me-auto kbridge-text text-color-header spacing-2">K-Bridge</strong>
+                        <small class="text-color-header">Ngay bây giờ</small>
                         <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
                     </div>
-                    <div class="toast-body" id="registerValidationSummary">
-                        Thành công!!
+                    <div class="toast-body bg-main-color-background text-color-logo" >
+                        <div id="registerValidationSummary"></div>
                     </div>
                 </div>
             </div>
@@ -135,14 +135,14 @@
 
                     <div  class="position-fixed top-0 end-0 p-3" style="z-index: 11">
                         <div id="liveToastLogin" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-                            <div class="toast-header">
+                            <div class="toast-header bg-main-color-header">
                                 <img src="~/img/Logo_75.png" height="20" width="20" class="rounded me-2" alt="...">
-                                <strong class="me-auto kbridge-text text-color-header text-spacing-2">K-Bridge</strong>
+                                <strong class="me-auto kbridge-text text-color-header spacing-2">K-Bridge</strong>
                                 <small>Ngay bây giờ</small>
                                 <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
                             </div>
-                            <div class="toast-body" id="loginValidationSummary">
-                                Thành công!!
+                            <div class="toast-body bg-main-color-background text-color-logo" >
+                                <div id="loginValidationSummary"></div>
                             </div>
                         </div>
                     </div>
@@ -219,8 +219,9 @@
         // Kiểm tra mật khẩu có chứa ít nhất một chữ cái và một số
         if (!/(?=.*[A-Za-z])(?=.*\d)/.test(password)) {
             var errorSummary = document.getElementById('registerValidationSummary');
-            errorSummary.innerHTML = '<ul><li>Mật khẩu phải chứa ít nhất một chữ cái và một số.</li></ul>';
+            errorSummary.innerHTML = '<p>Mật khẩu phải chứa ít nhất một chữ cái và một số.</p>';
             errorSummary.style.display = 'block';
+            showToast('liveToastSignUp');
             return;
         }
 
@@ -234,40 +235,30 @@
                 errorSummary.innerHTML = ''; // Xóa nội dung cũ
 
                 if (data.success) {
-                    signupModal.hide(); // Ẩn modal đăng ký
-
-                    // Reset form đăng ký
+                    signupModal.hide();
                     document.getElementById('registerForm').reset();
-
-                    // Hiển thị modal đăng nhập
                     loginModal.show();
-
                 } else {
-                    // Hiển thị lỗi
                     if (data.errors && data.errors.length > 0) {
-                        var ul = document.createElement('ul');
+                        var p = document.createElement('p');
                         data.errors.forEach(function (error) {
-                            var li = document.createElement('li');
-                            li.textContent = error;
-                            ul.appendChild(li);
+                            p.textContent = error;
                         });
-                        errorSummary.appendChild(ul);
-                        errorSummary.style.display = 'block'; // Hiển thị phần tóm tắt lỗi
-                    } else {
-                        errorSummary.innerHTML = '<ul><li>Có lỗi xảy ra trong quá trình đăng ký.</li></ul>';
+                        errorSummary.appendChild(p);
                         errorSummary.style.display = 'block';
+                        showToast('liveToastSignUp');
+                    } else {
+                        errorSummary.innerHTML = '<p>Có lỗi xảy ra trong quá trình đăng ký.</p>';
+                        errorSummary.style.display = 'block';
+                        showToast('liveToastSignUp');
                     }
                 }
             });
     });
-
     // Xử lý đăng nhập
     document.getElementById('loginForm').addEventListener('submit', function (e) {
         e.preventDefault();
         var formData = new FormData(this);
-        formData.forEach((value, key) => {
-            console.log(key + ': ' + value);
-        });
         fetch('/Home/Login', {
             method: 'POST',
             body: formData,
@@ -277,24 +268,23 @@
                 if (data.success) {
                     loginModal.hide();
                     document.getElementById('loginForm').reset();
-                    //updateUIAfterLogin(data.user);
                     window.location.reload();
                 } else {
                     var errorSummary = document.getElementById('loginValidationSummary');
                     errorSummary.innerHTML = ''; // Xóa nội dung cũ
 
                     if (data.errors && data.errors.length > 0) {
-                        var ul = document.createElement('ul');
+                        var p = document.createElement('p');
                         data.errors.forEach(function (error) {
-                            var li = document.createElement('li');
-                            li.textContent = error;
-                            ul.appendChild(li);
+                            p.textContent = error;
                         });
-                        errorSummary.appendChild(ul);
-                        errorSummary.style.display = 'block'; // Hiển thị phần tóm tắt lỗi
-                    } else {
-                        errorSummary.innerHTML = '<ul><li>Có lỗi xảy ra trong quá trình đăng nhập.</li></ul>';
+                        errorSummary.appendChild(p);
                         errorSummary.style.display = 'block';
+                        showToast('liveToastLogin');
+                    } else {
+                        errorSummary.innerHTML = '<p>Có lỗi xảy ra trong quá trình đăng nhập.</p>';
+                        errorSummary.style.display = 'block';
+                        showToast('liveToastLogin');
                     }
                 }
             })
@@ -302,7 +292,11 @@
                 console.error('Error:', error);
             });
     });
-
+    function showToast(toastId) {
+        var toastElement = document.getElementById(toastId);
+        var toast = new bootstrap.Toast(toastElement);
+        toast.show();
+    }
     // function updateUIAfterLogin(user) {
     //     var loginButtons = document.querySelector('.align-items-center.d-flex.justify-content-between');
     //     if (loginButtons) {
@@ -343,21 +337,5 @@
     });
 
 
-    var toastTriggerSignUp = document.getElementById('liveToastBtnSignUp')
-    var toastLiveExampleSignUp = document.getElementById('liveToastSignUp')
-    if (toastTriggerSignUp) {
-        toastTriggerSignUp.addEventListener('click', function () {
-            var toast = new bootstrap.Toast(toastLiveExampleSignUp)
-            toast.show()
-        })
-    }
-    var toastTriggerLogin = document.getElementById('liveToastBtnLogin')
-    var toastLiveExampleLogin = document.getElementById('liveToastLogin')
-    if (toastTriggerLogin) {
-        toastTriggerLogin.addEventListener('click', function () {
-            var toast = new bootstrap.Toast(toastLiveExampleLogin)
-            toast.show()
-        })
-    }
 </script>
 
