--- a/K_Bridge/Views/Shared/Components/AdminNavigationMenu/Default.cshtml
+++ b/K_Bridge/Views/Shared/Components/AdminNavigationMenu/Default.cshtml
@@ -61,7 +61,7 @@
     }@if (role == "Mgr")
     {
         <li class="nav-item mt-2">
-            <a class="nav-link nav-link-text" href="#">
+            <a class="nav-link nav-link-text" href="/Admin/Manager/List">
                 <img src="~/img/icon_admin_50.png" class="sidebar-icon" /> Quản trị viên
             </a>
         </li>
