--- a/K_Bridge/Views/User/EditEmail.cshtml
+++ b/K_Bridge/Views/User/EditEmail.cshtml
@@ -24,7 +24,7 @@
             </div>
 
             <div class="form-group mb-4 text-color-header fw-bold">
-                <label for="email">Email mới</label>
+                <label for="email">Cập nhật Email</label>
                 <input type="email" class="form-control bg-main-color-background focus text-color-header rounded-3 mt-2"
                        minlength="8" required
                        placeholder="Nhập email của bạn">
