--- a/K_Bridge/Views/Post/Details.cshtml
+++ b/K_Bridge/Views/Post/Details.cshtml
@@ -20,13 +20,8 @@
     </div>
     <div class="row m-0 p-0 mt-3 ">
         <div class="col-lg-1 flex-column">
-            <button class="m-1">
-                <img src="~/img/icon_like_filled.png" alt="Like" />
-            </button>
-            <p class="mt-2 fs-6 fw-bold text-color-logo">-123</p>
-            <button class="m-1">
-                <img src="~/img/icon_dislike_filled.png.png" alt="Like" />
-            </button>
+            <partial name="_LikeDislikePartial" model="new Post_Like { PostID = ViewBag.Post.ID, Post = ViewBag.Post }" />
+
         </div>
         <div class="col-lg-11">
             <div class="reply-content">
