--- a/K_Bridge/Views/Post/Details.cshtml
+++ b/K_Bridge/Views/Post/Details.cshtml
@@ -21,7 +21,6 @@
     <div class="row m-0 p-0 mt-3 ">
         <div class="col-lg-1 flex-column">
             <partial name="_LikeDislikePartial" model="new Post_Like { PostID = ViewBag.Post.ID, Post = ViewBag.Post }" />
-
         </div>
         <div class="col-lg-11">
             <div class="reply-content">
@@ -61,32 +60,8 @@
                         </div>
                     </div>
                 </div>
-                @*    @foreach (var reply in ViewBag.Post.Replies ?? Enumerable.Empty<Forum>())
-            {
-            <div class="row my-3 m-0" style="border-bottom: 1px solid #8E6745">
-            <div class="col-lg-1 flex-column">
-            <button class="m-1">
-            <img src="~/img/like.png" alt="Like" />
-            </button>
-            <p class="mt-2 fs-6 fw-bold text-color-logo">-123</p>
-            <button class="m-1">
-            <img src="~/img/un_like.png" alt="Like" />
-            </button>
-            </div>
-            <div class="col-lg-11">
-            <div class="reply-content">
-            @Html.Raw(reply.Content)
-            </div>
-            </div>
-            <div class="d-flex justify-content-end mb-2">
-            <img src="~/img/user.jpg" class="rounded-circle" alt="Avatar" width="30" height="30">
-            <div class="newest-card-username mx-2">@reply.User.Username trả lời @GetTimeAgoHelper.GetTimeAgo(reply.CreatedAt)</div>
-            </div>
-            </div>
-
-            } *@
                 <div id="repliesContainer">
-                    <partial name="_RepliesPartial" model="ViewBag.Reply" />
+                    <partial name="_RepliesPartial" model="ViewBag.RepliesWithLike" />
                 </div>
             }
             <div>
