--- a/K_Bridge/Views/Post/Details.cshtml
+++ b/K_Bridge/Views/Post/Details.cshtml
@@ -54,8 +54,8 @@
                             <label for="sortSelect">Sắp xếp theo:</label>
                             <select class="form-control" id="sortSelect">
                                 <option value="newest" selected="@(ViewBag.Sort == "newest" ? "selected" : "")">Mới nhất</option>
-                                <option value="most_helpful" selected="@(ViewBag.Sort == "oldest" ? "selected" : "")">Cũ nhất</option>
-                                <option value="trending" selected="@(ViewBag.Sort == "helpful" ? "selected" : "")">Hữu ích nhất</option>
+                                <option value="oldest" selected="@(ViewBag.Sort == "oldest" ? "selected" : "")">Cũ nhất</option>
+                                <option value="helpful" selected="@(ViewBag.Sort == "helpful" ? "selected" : "")">Hữu ích nhất</option>
                             </select>
                         </div>
                     </div>
