--- a/K_Bridge/Views/Post/Create.cshtml
+++ b/K_Bridge/Views/Post/Create.cshtml
@@ -11,7 +11,7 @@
     <div class="col-11 text-color-logo px-3">
         <div class="d-flex">
             <div>Chào</div>
-            <div class="fw-bold px-1">User1,</div>
+            <div class="fw-bold px-1">@ViewBag.Username,</div>
         </div>
         <div>Tích cực đăng bài là điều cần thiết để gia tăng lượt thích và uy tín của bản thân!!</div>
     </div>
