--- a/K_Bridge/Views/Home/Index.cshtml
+++ b/K_Bridge/Views/Home/Index.cshtml
@@ -59,7 +59,7 @@
                             <div class="reply-content">
                                 @Html.Raw(latestPost.Content)
                             </div>
-                            </div>
+                        </div>
                         <div class="d-flex justify-content-end mt-2">
                             <img src="/img/user.jpg" class="rounded-circle" alt="Avatar" width="30" height="30">
                             <div class="newest-card-username mx-2">@latestPost.User.Username hỏi @GetTimeAgoHelper.GetTimeAgo(latestPost.CreatedAt)</div>
@@ -78,7 +78,7 @@
              style="border-top:5px solid @GetForumColorHelper.GetForumBackgroundColor(forum.ID);">
             <button id="toggle-cate-@forum.ID" class="flex-grow-0 border-main-color-logo border-bottom p-3 rounded-3 h-50 d-lg-inline-flex justify-content-lg-between">
                 @* <div class="text-uppercase text-decoration-none text-black" href="/Category/List?forum=@forum.Name">@forum.Name</div> *@
-                <div class="text-uppercase text-decoration-none text-black" onclick="window.location.href='/Category/TopicList'">@forum.Name</div>
+                <div class="text-uppercase text-decoration-none text-black" onclick="window.location.href='/Topic/List?forum=@forum.ID'">@forum.Name</div>
 
                 <img id="arrow-icon-cate-@forum.ID" src="/img/arrow_down.png" alt="arrow_down" />
             </button>
@@ -86,8 +86,8 @@
             <div id="container-cate-@forum.ID">
                 @foreach (var topic in forum.Topics)
                 {
-                    <div class="w-auto rounded-3" >
-                        <div class="row flex-nowrap p-2 m-0" >
+                    <div class="w-auto rounded-3" onclick="window.location.href='/Topic/Post/List?topic=@topic.ID'">
+                        <div class="row flex-nowrap p-2 m-0">
                             <div class="col-lg-1 p-0 m-2 d-flex justify-content-center">
                                 <img src="/img/cate_1.png" alt="avatar" style="width: 50px; height: 50px;" />
                             </div>
@@ -110,9 +110,9 @@
                                 <div class="col-lg-8 d-flex flex-column justify-content-center">
                                     <div class="fw-12 p-0 m-0 home-topic-latest-post-title">
 
-                                            @topic.Posts[0].Title
+                                        @topic.Posts[0].Title
 
-                                        </div>
+                                    </div>
                                     <div class="fs-12 opacity-75 d-flex align-items-center">
                                         @topic.Posts[0].CreatedAtFormatted - <p class="fw-bold ms-1 d-flex p-0 m-0">@topic.Posts[0].User.Username</p>
                                     </div>
