--- a/K_Bridge/Views/Home/TopicList.cshtml
+++ b/K_Bridge/Views/Home/TopicList.cshtml
@@ -3,41 +3,50 @@
 }
 
 <div class="row mb-5">
-    <div class="col-6 d-flex justify-content-start fw-bold fs-4 text-uppercase mb-3">
+    <div class="col-12 d-flex justify-content-start fw-bold fs-4 text-uppercase mb-3">
         @ViewBag.ForumName
     </div>
 
-    @foreach (var topic in ViewBag.Topics)
+    @if (ViewBag.Topics.Count > 0)
     {
-        <a class="w-1 border-bottom border-main-color-logo text-decoration-none text-black" href="/Topic/Post/List?topic=@topic.ID">
-            <div class="row flex-nowrap p-2 m-0">
-                <div class="col-lg-1 p-0 m-2 d-flex justify-content-center">
-                    <img src="/img/cate_1.png" alt="avatar" style="width: 50px; height: 50px;" />
-                </div>
-                <div class="col-lg-5 d-flex flex-column justify-content-center">
-                    <div class="fw-normal p-0 my-1">@topic.Name</div>
-                    <div class="fs-12 opacity-75 my-1">
-                        @topic.Description
+        @foreach (var topic in ViewBag.Topics)
+        {
+            <a class="w-1 border-bottom border-main-color-logo text-decoration-none text-black" href="/Topic/Post/List?topic=@topic.ID">
+                <div class="row flex-nowrap p-2 m-0">
+                    <div class="col-lg-1 p-0 m-2 d-flex justify-content-center">
+                        <img src="/img/cate_1.png" alt="avatar" style="width: 50px; height: 50px;" />
                     </div>
-                </div>
-                <div class="col-lg-2 p-0 d-flex align-items-center">
-                    <div class="col-lg-11 d-flex flex-column justify-content-center">
-                        <div class="fs-6 me-2 p-0 d-flex justify-content-center">@topic.Posts.Count</div>
-                        <div class="fw-normal p-0 d-flex justify-content-center">Bài viết</div>
+                    <div class="col-lg-5 d-flex flex-column justify-content-center">
+                        <div class="fw-normal p-0 my-1">@topic.Name</div>
+                        <div class="fs-12 opacity-75 my-1">
+                            @topic.Description
+                        </div>
                     </div>
-                </div>
-                <div class="col-lg-4 p-0 d-flex align-items-center">
-                    <div class="col-lg-2 p-0 m-2 d-flex align-items-center">
-                        <img src="/img/avatar_40.png" alt="avatar" style="width: 40px; height: 40px;" />
+                    <div class="col-lg-2 p-0 d-flex align-items-center">
+                        <div class="col-lg-11 d-flex flex-column justify-content-center">
+                            <div class="fs-6 me-2 p-0 d-flex justify-content-center">@topic.Posts.Count</div>
+                            <div class="fw-normal p-0 d-flex justify-content-center">Bài viết</div>
+                        </div>
                     </div>
-                    <div class="col-lg-8 d-flex flex-column justify-content-center">
-                        <div class="fw-12 p-0 m-0 home-topic-latest-post-title">@topic.Posts[0].Title</div>
-                        <div class="fs-12 opacity-75 d-flex align-items-center">
-                            @topic.Posts[0].CreatedAtFormatted - <p class="fw-bold ms-1 d-flex p-0 m-0">@topic.Posts[0].User.Username</p>
+                    <div class="col-lg-4 p-0 d-flex align-items-center">
+                        <div class="col-lg-2 p-0 m-2 d-flex align-items-center">
+                            <img src="/img/avatar_40.png" alt="avatar" style="width: 40px; height: 40px;" />
+                        </div>
+                        <div class="col-lg-8 d-flex flex-column justify-content-center">
+                            <div class="fw-12 p-0 m-0 home-topic-latest-post-title">@topic.Posts[0].Title</div>
+                            <div class="fs-12 opacity-75 d-flex align-items-center">
+                                @topic.Posts[0].CreatedAtFormatted - <p class="fw-bold ms-1 d-flex p-0 m-0">@topic.Posts[0].User.Username</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </a>
+            </a>
+        }
+
     }
+    else
+    {
+        <div>Chưa có bài viết nào được tạo trong diễn đàn này. Hãy đăng bài viết ngay !!!</div>
+    }
+
 </div>
