--- a/K_Bridge/Views/User/EditProfile.cshtml
+++ b/K_Bridge/Views/User/EditProfile.cshtml
@@ -13,8 +13,10 @@
 <div class="d-flex">
     <div class="col-lg-6">
         <div style="width: 90%;">
-            <div class="mt-2 text-color-header fw-bold text-uppercase fs-12">tên hiển thị</div>
-            <input type="text" style="width:90%;" class="my-2 flex-grow-1 px-3 py-1 fs-6 text-color-logo rounded-8 focus bg-main-color-btn" placeholder="Tên hiển thị..." value="test1">
+            @*             <div class="mt-2 text-color-header fw-bold text-uppercase fs-12">tên hiển thị</div>
+            <input type="text" style="width:90%;" class="my-2 flex-grow-1 px-3 py-1 fs-6 text-color-logo rounded-8 focus bg-main-color-btn"
+            placeholder="Tên hiển thị..." value="test1">
+            *@
             <div class="mt-2 text-color-header fw-bold text-uppercase fs-12">ảnh đại điện</div>
             <label for="avatar-upload" style="width:90%; cursor:pointer;" class=" my-2  btn-account-log px-3 py-1 rounded-3">
                 <i class="bi bi-upload mx-3"></i> Chọn ảnh mới
@@ -27,9 +29,8 @@
     </div>
     <div class="col-lg-6">
         <div class="text-color-header fw-bold text-uppercase fs-12">Giới thiệu về tôi</div>
-        <textarea
-            style="min-height:100%; min-width:98%;"
-            class="my-2 m-2 p-3 fs-6 text-color-logo rounded-8 focus bg-main-color-btn" id="content-textarea" placeholder="Viết nội dung của bài viết tại đây...">Đây là nội dung giới thiệu tài khoản Đây là nội dung giới thiệu tài khoản Đây là nội dung giới thiệu tài khoản</textarea>
+        <textarea style="min-height:100%; min-width:98%;"
+                  class="my-2 m-2 p-3 fs-6 text-color-logo rounded-8 focus bg-main-color-btn" id="content-textarea" placeholder="Viết nội dung của bài viết tại đây...">Đây là nội dung giới thiệu tài khoản Đây là nội dung giới thiệu tài khoản Đây là nội dung giới thiệu tài khoản</textarea>
     </div>
 </div>
 <div>
@@ -40,7 +41,9 @@
             <div class="d-flex position-relative">
                 <div class="col-lg-3">
                     <img width="100" height="100"
-                         src="~/img/user.jpg" id="avatar-preview" class="img-fluid rounded-3 position-absolute" style="border-width: 10px; border-color: #FFBE98; top:-40px; left:45px; object-fit: cover;" alt="Avatar">
+                         src="~/img/user.jpg" id="avatar-preview" class="img-fluid rounded-3 position-absolute"
+                         style="border-width: 10px; border-color: #FFBE98; top:-40px; left:45px; object-fit: cover;"
+                         alt="Avatar">
                 </div>
                 <div class="mt-3">
                     <p class="fs-5 text-color-logo">test1</p>
@@ -58,11 +61,11 @@
 
 </div>
 <script>
-    document.getElementById('avatar-upload').addEventListener('change', function(e) {
+    document.getElementById('avatar-upload').addEventListener('change', function (e) {
         var file = e.target.files[0];
         if (file) {
             var reader = new FileReader();
-            reader.onload = function(e) {
+            reader.onload = function (e) {
                 document.getElementById('avatar-preview').src = e.target.result;
             }
             reader.readAsDataURL(file);
