--- a/K_Bridge/Views/User/Index.cshtml
+++ b/K_Bridge/Views/User/Index.cshtml
@@ -2,6 +2,7 @@
 @model LoginRegisterViewModel
 @{
     ViewData["Title"] = "Tài khoản của tôi";
+    var user = ViewBag.UserInfo;
 }
 <div>
     <div>
@@ -10,7 +11,14 @@
     <div class="rounded-8 bg-main-color-layout position-relative pb-2" style="min-height: 400px;">
         <div class="rounded-top bg-main-color-header" style="min-height: 100px;"></div>
         <div class="rounded-3 position-absolute " style="top: 50px; left: 80px;">
-            <img src="~/img/user.jpg" alt="Avatar" height="100" width="100" class=" rounded-3" style="border:10px solid #FFBE98; " />
+            @if(user.Avatar == null)
+            {
+                <img src="~/img/user.jpg" alt="Avatar" height="100" width="100" class=" rounded-3" style="border:10px solid #FFBE98; " />
+            }
+            else
+            {
+                <img src="~/uploads/@user.Avatar" alt="Avatar" height="100" width="100" class=" rounded-3" style="border:10px solid #FFBE98; " />
+            }
         </div>
 
         <div class="d-flex justify-content-end mt-2 " onclick="window.location.href='/UserProfile/EditProfile/test1'">
@@ -19,31 +27,39 @@
         </div>
         <div class="m-3 bg-main-color-background rounded-8">
             <div class="p-5 pb-2">
-                <div class="d-flex justify-content-between mt-2">
-                    <div class="d-flex flex-column">
-                        <p class="text-uppercase fs-12 text-color-logo fw-bold">Tên hiển thị</p>
-                        <p class="fs-6 text-color-header">User</p>
-                    </div>
-                    <button class="btn-edit-profile px-4 py-1 rounded-8 h-25 w-25" onclick="window.location.href='/UserProfile/EditDisplayName/test1'">Chỉnh sửa</button>
+                @*                 <div class="d-flex justify-content-between mt-2">
+                <div class="d-flex flex-column">
+                <p class="text-uppercase fs-12 text-color-logo fw-bold">Tên hiển thị</p>
+                <p class="fs-6 text-color-header">User</p>
                 </div>
+                <button class="btn-edit-profile px-4 py-1 rounded-8 h-25 w-25" onclick="window.location.href='/UserProfile/EditDisplayName/test1'">Chỉnh sửa</button>
+                </div>
+                *@
                 <div class="d-flex justify-content-between mt-2">
                     <div class="d-flex flex-column">
                         <p class="text-uppercase fs-12 text-color-logo fw-bold">Tên đăng nhập</p>
-                        <p class="fs-6 text-color-header">User13424</p>
+                        <p class="fs-6 text-color-header">@user.Username</p>
                     </div>
-                    <button class="btn-edit-profile px-4 py-1 rounded-8 h-25  w-25" onclick="window.location.href='/UserProfile/EditUserName/test1'">Chỉnh sửa</button>
+                    <button class="btn-edit-profile px-4 py-1 rounded-8 h-25  w-25" onclick="window.location.href='/UserProfile/EditUserName?id=@user.ID'">Chỉnh sửa</button>
                 </div>
                 <div class="d-flex justify-content-between mt-2">
                     <div class="d-flex flex-column">
                         <p class="text-uppercase fs-12 text-color-logo fw-bold">Email</p>
-                        <p class="fs-6 text-color-header">User13424@gmail.com</p>
+                        <p class="fs-6 text-color-header">@user.Email</p>
                     </div>
                     <button class="btn-edit-profile px-4 py-1 rounded-8 h-25  w-25" onclick="window.location.href='/UserProfile/EditEmail/test1'">Chỉnh sửa</button>
                 </div>
                 <div class="d-flex justify-content-between mt-2">
                     <div class="d-flex flex-column">
                         <p class="text-uppercase fs-12 text-color-logo fw-bold">Số điện thoại</p>
-                        <p class="fs-6 text-color-header">Bạn chưa thêm số điện thoại nào</p>
+                        @if(user.PhoneNumber == null)
+                        {
+                            <p class="fs-6 text-color-header">Bạn chưa thêm số điện thoại nào</p>
+                        }
+                        else
+                        {
+                            <p class="fs-6 text-color-header">@user.PhoneNumber</p>
+                        }
                     </div>
                     <button class="btn-edit-profile px-4 py-1 rounded-8 h-25  w-25" onclick="window.location.href='/UserProfile/EditPhoneNum/test1'">Thêm mới</button>
                 </div>
@@ -130,7 +146,7 @@
 </button> *@
 
 <!-- Modal -->
-<div class="modal fade modal-new-post-overall rounded-3"s style="overflow-x: hidden;" id="exampleModal" tabindex="-1"
+<div class="modal fade modal-new-post-overall rounded-3" s style="overflow-x: hidden;" id="exampleModal" tabindex="-1"
      aria-labelledby="newPostModalLabel" aria-hidden="true">
     <div class="modal-dialog" style="border-radius: 20px;">
         <div class="modal-content">
@@ -144,7 +160,7 @@
                 <div class="text-color-header  justify-content-center flex-column m-auto" style="min-height:100px;">
                     <p class="fs-3 text-color-header fw-bold m-0 mt-2">Bạn chắc chắn chứ?</p>
                     <p class="text-color-headerfw-bold m-0 p-0">Các thay đổi sẽ không được lưu lại!</p>
-              </div>
+                </div>
             </div>
             <div class="d-flex justify-content-center bg-main-color-layout pb-4 rounded-bottom">
                 <button type="button" class="rounded-2 px-3 py-1 btn-confirm me-1" data-bs-dismiss="modal" style="min-width:148px;">Huỷ</button>
