--- a/K_Bridge/Views/User/Index.cshtml
+++ b/K_Bridge/Views/User/Index.cshtml
@@ -47,7 +47,7 @@
                         <p class="text-uppercase fs-12 text-color-logo fw-bold">Email</p>
                         <p class="fs-6 text-color-header">@user.Email</p>
                     </div>
-                    <button class="btn-edit-profile px-4 py-1 rounded-8 h-25  w-25" onclick="window.location.href='/UserProfile/EditEmail/test1'">Chỉnh sửa</button>
+                    <button class="btn-edit-profile px-4 py-1 rounded-8 h-25  w-25" onclick="window.location.href='/UserProfile/EditEmail?id=@user.ID'">Chỉnh sửa</button>
                 </div>
                 <div class="d-flex justify-content-between mt-2">
                     <div class="d-flex flex-column">
