--- a/K_Bridge/Views/Shared/Components/LayoutHeader/Default.cshtml
+++ b/K_Bridge/Views/Shared/Components/LayoutHeader/Default.cshtml
@@ -66,13 +66,7 @@
 
             <div class="position-fixed top-0 end-0 p-3" style="z-index: 11">
                 <div id="liveToastSignUp" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-                    <div class="toast-header bg-main-color-layout">
-                        <img src="~/img/Logo_75.png" height="20" width="20" class="rounded me-2" alt="...">
-                        <strong class="me-auto kbridge-text text-color-header spacing-2">K-Bridge</strong>
-                        <small class="text-color-header">Ngay bây giờ</small>
-                        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-                    </div>
-                    <div class="toast-body bg-main-color-background text-color-logo" >
+                    <div class="toast-body text-color-background fw-bold text-center rounded-bottom rounded-3" style="background-color: #493422; border: 2px solid #FFF0E6;">
                         <div id="registerValidationSummary"></div>
                     </div>
                 </div>
@@ -94,7 +88,7 @@
                         <label for="password">Mật khẩu</label>
                         <input type="password" class="form-control border-main-color-logo border  focus text-color-header rounded-3 mt-2"
                                id="password" asp-for="RegisterModel.Password" minlength="8" required
-                               placeholder="Mật khẩu phải chứa ít nhất 8 ký tự, một chữ cái và một chữ số">
+                               placeholder="Mật khẩu chứa ít nhất 8 ký tự, một chữ cái và một chữ số">
                     </div>
 
                     <div class="form-group mb-4 text-color-header fw-bold">
@@ -133,15 +127,9 @@
                         </div>
                     </h5>
 
-                    <div  class="position-fixed top-0 end-0 p-3" style="z-index: 11">
+                    <div class="position-fixed top-0 end-0 rounded-3 m-2 mt-4" style="z-index: 11;">
                         <div id="liveToastLogin" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-                            <div class="toast-header bg-main-color-header">
-                                <img src="~/img/Logo_75.png" height="20" width="20" class="rounded me-2" alt="...">
-                                <strong class="me-auto kbridge-text text-color-header spacing-2">K-Bridge</strong>
-                                <small>Ngay bây giờ</small>
-                                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-                            </div>
-                            <div class="toast-body bg-main-color-background text-color-logo" >
+                            <div class="toast-body text-color-background fw-bold text-center rounded-bottom rounded-3" style="background-color: #493422; border: 2px solid #FFF0E6;">
                                 <div id="loginValidationSummary"></div>
                             </div>
                         </div>
@@ -219,7 +207,7 @@
         // Kiểm tra mật khẩu có chứa ít nhất một chữ cái và một số
         if (!/(?=.*[A-Za-z])(?=.*\d)/.test(password)) {
             var errorSummary = document.getElementById('registerValidationSummary');
-            errorSummary.innerHTML = '<p>Mật khẩu phải chứa ít nhất một chữ cái và một số.</p>';
+            errorSummary.innerHTML = '<div>Mật khẩu chứa ít nhất một chữ cái và một số.</div>';
             errorSummary.style.display = 'block';
             showToast('liveToastSignUp');
             return;
@@ -240,15 +228,15 @@
                     loginModal.show();
                 } else {
                     if (data.errors && data.errors.length > 0) {
-                        var p = document.createElement('p');
+                        var div = document.createElement('div');
                         data.errors.forEach(function (error) {
-                            p.textContent = error;
+                            div.textContent = error;
                         });
-                        errorSummary.appendChild(p);
+                        errorSummary.appendChild(div);
                         errorSummary.style.display = 'block';
                         showToast('liveToastSignUp');
                     } else {
-                        errorSummary.innerHTML = '<p>Có lỗi xảy ra trong quá trình đăng ký.</p>';
+                        errorSummary.innerHTML = '<div>Có lỗi xảy ra trong quá trình đăng ký!!</div>';
                         errorSummary.style.display = 'block';
                         showToast('liveToastSignUp');
                     }
@@ -274,15 +262,15 @@
                     errorSummary.innerHTML = ''; // Xóa nội dung cũ
 
                     if (data.errors && data.errors.length > 0) {
-                        var p = document.createElement('p');
+                        var div = document.createElement('div');
                         data.errors.forEach(function (error) {
-                            p.textContent = error;
+                            div.textContent = error;
                         });
-                        errorSummary.appendChild(p);
+                        errorSummary.appendChild(div);
                         errorSummary.style.display = 'block';
                         showToast('liveToastLogin');
                     } else {
-                        errorSummary.innerHTML = '<p>Có lỗi xảy ra trong quá trình đăng nhập.</p>';
+                        errorSummary.innerHTML = '<div>Có lỗi xảy ra trong quá trình đăng nhập!!</div>';
                         errorSummary.style.display = 'block';
                         showToast('liveToastLogin');
                     }
